--- a/src/Koffee/Koffee.fsproj
+++ b/src/Koffee/Koffee.fsproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net451</TargetFramework>
+    <Win32Resource>.\resources\koffee.res</Win32Resource>
   </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
