Fixes AssemblyInfo not being used.

--- a/src/Koffee/Koffee.fsproj
+++ b/src/Koffee/Koffee.fsproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net451</TargetFramework>
     <Win32Resource>.\resources\koffee.res</Win32Resource>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
